--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=https://streaming-graph.facebook.com
+%dev.quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=http://localhost:8080/mock
+%test.quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=http://localhost:8080/mock
 quarkus.log.category."be.aufildemescoutures".level=DEBUG
-quarkus.log.category."com.github.tomakehurst.wiremock".level=DEBUG
-
+quarkus.log.category."*.jackson".level=DEBUG
 comments.output_directory=/tmp/
+# This is the system user's token
+%test.facebook.page_access_token=test
