Many updates, most notably on the mocking configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=https://streaming-graph.facebook.com
 %dev.quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=http://localhost:8080/mock
-%test.quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=http://localhost:8080/mock
+%test.quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".url=${test.url}/mock
 # This is the system user's token
 %test.facebook.page_access_token=test
 %dev.facebook.page_access_token=test
 
-quarkus.log.category."be.aufildemescoutures.domain.review".level=DEBUG
+%dev.quarkus.log.category."be.aufildemescoutures.mock".level=DEBUG
 comments.output_directory=/tmp/
