Experimenting with ELM, really cool frontend language !

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".
 %test.facebook.page_access_token=test
 %dev.facebook.page_access_token=test
 
-%dev.quarkus.log.category."be.aufildemescoutures.mock".level=DEBUG
+%dev.quarkus.log.category."be.aufildemescoutures.domain.live_tracking".level=DEBUG
 comments.output_directory=/tmp/
+quarkus.http.cors=true
