--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ quarkusPluginVersion=2.11.1.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.11.1.Final
+kotlin.js.webpack.major.version=4
+
