--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,5 @@ quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.11.1.Final
 kotlin.js.webpack.major.version=4
-
+kotlinVersion = "1.6.21"
+kotlinxVersion= "1.6.21"
