Test live tracker API using Rest Assured

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 #Gradle properties
-quarkusPluginId=io.quarkus
+#Sat Sep 24 07:51:15 CEST 2022
 quarkusPluginVersion=2.11.1.Final
-quarkusPlatformGroupId=io.quarkus.platform
+kotlinVersion="1.6.21"
 quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=2.11.1.Final
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
 kotlin.js.webpack.major.version=4
-kotlinVersion = "1.6.21"
-kotlinxVersion= "1.6.21"
+quarkusPlatformVersion=2.11.1.Final
+kotlinxVersion="1.6.21"
