--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,9 +8,10 @@ quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".
 comments.output_directory=/tmp/
 quarkus.http.cors=true
 
+quarkus.application.name=live_tracker  
+quarkus.opentelemetry.enabled=true 
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317 
 
 %dev.quarkus.log.category."be.aufildemescoutures".level=DEBUG
-quarkus.rest-client.logging.scope=request-response
-quarkus.rest-client.logging.body-limit=1024
-quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
 
