Contest mode ready on backend side

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,10 +8,11 @@ quarkus.rest-client."be.aufildemescoutures.infrastructure.facebook.VideoStream".
 comments.output_directory=/tmp/
 quarkus.http.cors=true
 
-quarkus.application.name=live_tracker  
-quarkus.opentelemetry.enabled=true 
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317 
+quarkus.application.name=live_tracker
+quarkus.opentelemetry.enabled=false
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 
 %dev.quarkus.log.category."be.aufildemescoutures".level=DEBUG
-quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
+%test.quarkus.log.category."be.aufildemescoutures".level=DEBUG
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 
