Contest mode ready on backend side

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,9 +9,9 @@ comments.output_directory=/tmp/
 quarkus.http.cors=true
 
 quarkus.application.name=live-tracker
-quarkus.opentelemetry.enabled=true
+quarkus.opentelemetry.enabled=false
 quarkus.kubernetes-client.trust-certs=true
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://opentelemetry-collector.myproject.svc:4317
+# quarkus.opentelemetry.tracer.exporter.otlp.endpoint=<defined at runtime>
 
 %dev.quarkus.log.category."be.aufildemescoutures".level=DEBUG
 %test.quarkus.log.category."be.aufildemescoutures".level=DEBUG
