--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -2,7 +2,8 @@ name: "Build and Release"
 on:
   workflow_dispatch:
   release:
-    types: published
+    types: [published]
+
 jobs:
   build:
     runs-on: ubuntu-latest
