--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -6,6 +6,10 @@ on:
 
 jobs:
   build:
+    permissions:
+      packages: write
+      contents: read
+      
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -13,6 +17,6 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-
+        
       - name: Run build with Gradle Wrapper
         run: ./gradlew publish
