--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -10,6 +10,10 @@ jobs:
       packages: write
       contents: read
       
+    env: 
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_ACTOR: "alexgenon"
+      
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
