--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         
-      - name: Run build with Gradle Wrapper
-        run: ./gradlew publish
+      - name: Publish the backend
+        run: ./gradlew :backend:publish
