--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -9,11 +9,11 @@ jobs:
     permissions:
       packages: write
       contents: read
-      
-    env: 
+
+    env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITHUB_ACTOR: "alexgenon"
-      
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,6 +21,24 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-        
-      - name: Publish the backend
-        run: ./gradlew :backend:publish
+
+      - name: Build the backend
+        run: ./gradlew build
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push the docker image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          context: backend/
+          file: backend/src/main/docker/Dockerfile.jvm
+          tags: ghcr.io/alexgenon/facebook-live-tracker:latest
