--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -39,6 +39,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: ./backend/
+          context: .
           file: backend/src/main/docker/Dockerfile.jvm
           tags: ghcr.io/alexgenon/facebook-live-tracker:latest
