--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -22,12 +22,18 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Build the backend
-        run: ./gradlew build
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Build the backend
+        run: ./gradlew build
+
+      - name: list files in tmp
+        run: ls -R /tmp/
+      
+      - name: list files in current dir
+        run: ls -R .
+      
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
