--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -25,12 +25,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build the backend
-        run: ./gradlew build
-      
-      - name: list files in current dir
-        run: ls -R .
-      
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -42,6 +36,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: ./backend
+          context: .
           file: backend/src/main/docker/Dockerfile.jvm
           tags: ghcr.io/alexgenon/facebook-live-tracker:latest
