--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -1,8 +1,8 @@
 name: "Build and Release"
 on:
   workflow_dispatch:
-  release:
-    types: [published]
+  ##release:
+    ##types: [published]
 
 jobs:
   build:
