--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -1,8 +1,7 @@
 name: "Build and Release"
 on:
-  workflow_dispatch:
-  ##release:
-    ##types: [published]
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -38,4 +37,4 @@ jobs:
           push: true
           context: .
           file: backend/src/main/docker/Dockerfile.jvm
-          tags: ghcr.io/alexgenon/facebook-live-tracker:latest
+          tags: ghcr.io/alexgenon/facebook-live-tracker:$GITHUB_REF_NAME
