--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -18,9 +18,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -37,4 +34,6 @@ jobs:
           push: true
           context: .
           file: backend/src/main/docker/Dockerfile.jvm
-          tags: ghcr.io/alexgenon/facebook-live-tracker:$GITHUB_REF_NAME
+          tags: |
+            ghcr.io/alexgenon/facebook-live-tracker:$GITHUB_REF_NAME
+            ghcr.io/alexgenon/facebook-live-tracker:latest
