--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -35,5 +35,5 @@ jobs:
           context: .
           file: backend/src/main/docker/Dockerfile.jvm
           tags: |
-            ghcr.io/alexgenon/facebook-live-tracker:$GITHUB_REF_NAME
+            ghcr.io/alexgenon/facebook-live-tracker:${{ github.ref_name }}
             ghcr.io/alexgenon/facebook-live-tracker:latest
