--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -1,10 +1,14 @@
-name: "Release"
+name: Release
+
 on:
   release:
     types: [published]
 
+  workflow_dispatch:
+
 jobs:
   build:
+    name: Build java image
     permissions:
       packages: write
       contents: read
@@ -18,6 +22,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
+      - name: Build JVM based
+        run: ./gradlew build
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -28,12 +40,25 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push the docker image
+      - name: Build and push the JVM docker image
         uses: docker/build-push-action@v3
         with:
           push: true
           context: .
           file: backend/src/main/docker/Dockerfile.jvm
           tags: |
-            ghcr.io/alexgenon/facebook-live-tracker:${{ github.ref_name }}
-            ghcr.io/alexgenon/facebook-live-tracker:latest
+            ghcr.io/alexgenon/live-tracker:${{ github.ref_name }}
+            ghcr.io/alexgenon/live-tracker:latest
+
+      - name: Build native
+        run: ./gradlew build -Dquarkus.package.type=native
+
+      - name: Build and push the native docker image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          context: .
+          file: backend/src/main/docker/Dockerfile.native
+          tags: |
+            ghcr.io/alexgenon/live-tracker:native-${{ github.ref_name }}
+            ghcr.io/alexgenon/live-tracker:native-latest
