--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,6 @@ quarkus.kubernetes-client.trust-certs=true
 
 %dev.quarkus.log.category."be.aufildemescoutures".level=DEBUG
 %test.quarkus.log.category."be.aufildemescoutures".level=DEBUG
-quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 
 quarkus.openshift.env.secrets=live-tracker-fb-pat
