--- a/.github/workflows/integration_build.yml
+++ b/.github/workflows/integration_build.yml
@@ -2,9 +2,11 @@ name: "Build"
 on:
   workflow_dispatch:
   push:
-    branches:
-      - 'master'
-      - 'main'
+    paths:
+      - 'backend/*'
+      - 'core/*'
+      - 'frontend/*'
+      - '.github/workflows/integration_build.yml'
 
 jobs:
   build:
