trying out k8s deployment

--- a/backend/src/main/kubernetes/facebook-secrets.yaml
+++ b/backend/src/main/kubernetes/facebook-secrets.yaml
@@ -3,6 +3,6 @@ data:
   facebook.page_access_token: YWRtaW4=
 kind: Secret
 metadata:
-  name: live-tracker-fb-pat
-  namespace: alexandre-genon-dev
+  name: fb-pat
+  namespace: live-tracker
 type: Opaque
