need multiplatform build

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           push: true
           context: .
+          platforms: linux/amd64,linux/arm64
           file: backend/src/main/docker/Dockerfile.jvm
           tags: |
             ghcr.io/alexgenon/facebook-live-tracker:${{ github.ref_name }}
@@ -58,6 +59,7 @@ jobs:
         with:
           push: true
           context: .
+          platforms: linux/amd64,linux/arm64
           file: backend/src/main/docker/Dockerfile.native
           tags: |
             ghcr.io/alexgenon/facebook-live-tracker:native-${{ github.ref_name }}
