--- a/backend/src/main/kubernetes/live-tracker-deployment.yaml
+++ b/backend/src/main/kubernetes/live-tracker-deployment.yaml
@@ -2,13 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name:  live-tracker
-  namespace: default
+  namespace: live-tracker
   labels:
-    app:  live-tracker
+    app:  live-tracker-monolith
 spec:
   selector:
     matchLabels:
-      app: live-tracker
+      app: live-tracker-monolith
   replicas: 1
   strategy:
     rollingUpdate:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        app:  live-tracker
+        app:  live-tracker-monolith
     spec:
       # initContainers:
         # Init containers are exactly like regular containers, except:
@@ -30,18 +30,18 @@ spec:
         resources:
           requests:
             cpu: 100m
-            memory: 100Mi
+            memory: 500Mi
           limits:
             cpu: 100m
-            memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
+            memory: 500Mi
+        # livenessProbe:
+        #   tcpSocket:
+        #     port: 8080
+        #   initialDelaySeconds: 20
+        #   timeoutSeconds: 5
+        #   successThreshold: 1
+        #   failureThreshold: 3
+        #   periodSeconds: 10
         env:
         - name: FACEBOOK_PAGE_ACCESS_TOKEN
           valueFrom:
